# jack

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright  files  libjack++-dev.install  libjack++.install  rules
example/: CMakeLists.txt  server.cpp  sidetone.cpp
lib/: CMakeLists.txt  Config.cmake.in  client.cpp  driver.cpp  error.cpp  param.cpp  port.cpp  server.cpp
lib/jack++/: client.hpp  driver.hpp  error.hpp  param.hpp  port.hpp  server.hpp  types.hpp
src/: client.cpp  client.hpp  driver.cpp  driver.hpp  error.cpp  error.hpp  jack++.hpp  param.cpp  param.hpp  port.cpp  port.hpp  server.cpp  server.hpp
